--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^3.1.8",
     "@astrojs/rss": "^4.0.8",
     "@astrojs/sitemap": "^3.2.0",
     "astro": "^4.16.3",
-    "@astrojs/check": "^0.9.4",
+    "sass": "^1.79.5",
     "typescript": "^5.6.3"
   }
 }
