--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^3.1.8",
+    "@astrojs/react": "^3.6.2",
     "@astrojs/rss": "^4.0.8",
     "@astrojs/sitemap": "^3.2.0",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
     "astro": "^4.16.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sass": "^1.79.5",
     "typescript": "^5.6.3"
   }
