--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "astro": "^4.16.3",
+    "gsap": "^3.12.5",
+    "npm": "^10.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sass": "^1.79.5",
